objects/Account.object
<CustomObject>
    <fields>
        <fullName>ASCII_Test__c</fullName>
        <label>ASCII Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan 93</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountLookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Record Type1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accoutn_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accoutn Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Resolve_test__c</fullName>
        <label>Auto Resolve Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto1</fullName>
                </value>
                <value>
                    <fullName>Auto2</fullName>
                </value>
                <value>
                    <fullName>Auto3</fullName>
                </value>
                <value>
                    <fullName>Auto4</fullName>
                </value>
                <value>
                    <fullName>Auto5</fullName>
                </value>
                <value>
                    <fullName>Auto6</fullName>
                </value>
                <value>
                    <fullName>Auto7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Big__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Big</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JCS_NUMBER__c</fullName>
        <label>JCS_NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nested_Test_RT__c</fullName>
        <label>Nested Test RT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Destructive1</fullName>
                </value>
                <value>
                    <fullName>Destructive2</fullName>
                </value>
                <value>
                    <fullName>Destructive 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PA_Test_Field__c</fullName>
        <label>PA Test Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
                <value>
                    <fullName>PLUS 1500 (0597)</fullName>
                </value>
                <value>
                    <fullName>Value 4</fullName>
                </value>
                <value>
                    <fullName>Value5</fullName>
                </value>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>Test PA</fullName>
                </value>
                <value>
                    <fullName>PA Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Plastic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTrade_Channel__c</fullName>
        <label>SubTrade Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001 - Bakery</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021 - Hotell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Of Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xyz_Account_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>xyz Account Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Auto_Resolve_RT</fullName>
        <active>true</active>
        <label>Auto Resolve RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>DeleteRTacc</fullName>
        <active>true</active>
        <label>DeleteRTacc</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_Nested_Test</fullName>
        <active>true</active>
        <label>RT Nested Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type1</fullName>
        <active>true</active>
        <label>Record Type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type2</fullName>
        <active>true</active>
        <label>Record Type2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_Validation_Acc</fullName>
        <active>true</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>This error will be never displayed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_to_Relationship_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorMessage>This is always false</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation</fullName>
        <active>false</active>
        <errorConditionFormula>Name  &lt;&gt; &apos;&apos;</errorConditionFormula>
        <errorMessage>You must enter a name for the XXXXXXXXXXX account</errorMessage>
    </validationRules>
</CustomObject>